# rust-features-trials

./: README.md
features/build-deps-change-features-of-deps/: README.md  run-tests
features/build-deps-change-features-of-deps/correct/codegen/: Cargo.toml
features/build-deps-change-features-of-deps/incorrect/codegen/: Cargo.toml
features/build-deps-change-features-of-deps/incorrect/demo/: Cargo.toml
features/build-deps-change-features-of-deps/incorrect/demo/src/: lib.rs
features/build-deps-change-features-of-deps/libfoo/: Cargo.toml
features/build-deps-change-features-of-deps/libfoo/src/: lib.rs
features/example-1/bar/src/: main.rs
features/example-1/bar/tools/src/: lib.rs
features/features-only-for-specific-targets/: README.md
features/features-only-for-specific-targets/bar/: Cargo.toml
features/features-only-for-specific-targets/bar/tools/: Cargo.toml
features/features-only-for-specific-targets/libfoo/: Cargo.toml
features/features-only-for-specific-targets/libfoo/src/: lib.rs
